static/style.css
/* ... */
.navigation,
.logout_button {
  line-height: 250%;
}

.navigation img,
.logout_button img {
  margin-right: 0.5em;
  vertical-align: middle;
}

.navigation a,
.logout_button a {
  padding: 1ex;
}

.logout_button {
  float: right;
}

.searchbox {
  margin: 0;
  padding: 0.1ex 1em 0ex 1em;
  float: right;
  line-height: 250%;
}

.searchbox form {
  float: left;
}

.searchbox div {
  display: inline;
}

.searchbox select {
  margin-left: 0.3em;
  margin-right: 0.4em;
  font-size: 100%;
  width: 8em;
}

.searchbox input[type=text] {
  width: 8em;
  padding: 0.25ex 0.25em 0.25ex 0.25em;
  margin-right: 0.5em;
  font-size: 100%;
}

.searchbox input[type=submit] {
  font-size: 100%;
}

/*************************************************************************
 * Title of current page including path and actions
 */

.title_bar {
  border-bottom: 1px solid #777;
  margin-bottom: 2ex;
  padding-top: 1ex;
  padding-bottom: 0.5ex;
}

.title_bar_content {
  margin-left: 1em;
}

.path {
  color: #444;
}

.path div {
  font-size: 100%;
  line-height: 180%;
}

.path a {
  color: #444;
}

.slot_path div {
  display: inline;
  margin-left: 1em;
  margin-right: 1em;
}

.title {
  color: #000;
  margin-bottom: 0.5ex;
}

.slot_title {
}

.title div {
  font-weight: bold;
  font-size: 135%;
  line-height: 110%;
}

.title a {
  color: #000;
}

.member_image_avatar {
  float: left;
  margin-right: 0.5em;
}

.actions {
  font-size: 75%;
  line-height: 220%;
}

.slot_actions {
  display: inline;
}

.actions a {
  float: left;
  display: block;
  padding: 1px 0.5em 1px 0.0em;
  margin-right: 1em;
  vertical-align: middle;
}

.actions a:hover {
  background-color: #d7d7d7;
}

.actions img {
  padding-left: 0.2em;
  padding-right: 0.2em;
  vertical-align: middle;
}

.logo { 
  float: right;
  margin-right: 1em;
}

/*************************************************************************
 * vote info / delegation 
 */

.interest,
.slot_support,
.delegation,
.voting_requested {
  float: left;
  position: relative;
  z-index: 1;
}

.interest img,
.slot_support img,
.delegation img,
.voting_requested img {
  padding-left: 0.2em;
  padding-right: 0.2em;
}
.vote_info .head {
  float: left;
  margin-right: 1em;
}

.interest .head_active,
.slot_support .head_potential_supporter{
  background-color: #fec;
  border: 1px solid #b96;
}

.interest .head_autoreject {
  background-color: #fdd;
  border: 1px solid #b77;
}

.slot_support .head_supporter {
  background-color: #dfc;
  border: 1px solid #8b8;
}

.slot_support .head_initiator {
  background-color: #eee;
  border: 1px solid #999;
}

.delegation .head_active {
  background-color: #ddf;
  border: 1px solid #88b;
}

.delegation .change_delegation {
  margin-bottom: 2ex;
}

.delegation .change_delegation a {
  display: inline;
  float: none;
  padding: 1ex;
}

.delegation .delegation_participation {
  margin-left: 20.5em;
  margin-top: 3ex;
  font-style: italic;
  font-size: 80%;
}

.voting_requested .head_active {
  background-color: #fdd;
  border: 1px solid #b77;
}

.vote_info .close {
  position: absolute;
  top: 0;
  right: 0;
  padding: 1ex;
  display: block;
}

.vote_info .content {
  font-size: 133%;
  line-height: 100%;
  top: 3ex;
  display: none;
  position: absolute;
  z-index: 10;
  background-color: #fff;
  border: 1px solid #999;
  padding: 1em;
  width: 35em;
}

.vote_info .delegation_arrow {
  margin-top: 1ex;
  margin-bottom: 1ex;
  vertical-align: middle;
}

.vote_info .delegation_arrow_overridden {
  opacity: 0.4;
}

.vote_info .delegation_scope_overridden {
  color: #777;
}

.vote_info .delegation_scope {
  display: inline;
}

.vote_info .delegation_info {
}

.vote_info .member_thumb {
  clear: left;
}

.delegation_overridden .member_thumb {
  opacity: 0.4;
}

.delegation .revoke {
  margin: 0.5ex;
  float: right;
}

.delegation .revoke img {
  vertical-align: middle;
}


.sub_title div {
  padding-top: 1ex;
  margin-top: 1ex;
  font-weight: bold;
  font-size: 135%;
  line-height: 110%;
}

/*************************************************************************
 * Main content
 */

.main {
  margin-left: 1em;
  margin-right: 1em;
}


/*************************************************************************
 * ui.tab
 */

.ui_tabs_links {
  margin-top: 4ex;
  font-size: 75%;
}

.ui_tabs_links a {
  padding: 1ex;
  line-height: 200%;
  background-color: #e7e7e7;
  white-space: nowrap;
}

.ui_tabs_links a:hover {
  background-color: #d7d7d7;
}

.ui_tabs_links a.selected {
  background-color: #444;
  color: #fff;
  text-decoration: none;
  padding: 1ex;
}

.ui_tabs_content {
  border: 1px solid #444;
  padding: 1ex 1ex 1ex 1ex;
}

.web10 .ui_tabs_accordeon_head {
  margin-bottom: 1ex;
}

.web20 .ui_tabs_accordeon_head {
  font-size: 80%;
  font-weight: bold;
  display: block;
  background: #eee;
  border: 1px solid #bbb;
  color: #000;
  padding: 0.75ex;
  margin-top: 2ex;
  cursor: pointer;
}

.web20 .ui_tabs_accordeon_head img {
  vertical-align: middle;
  margin-right: 0.5em;
}

.web20 .ui_tabs_accordeon_head .bargraph {
  margin-right: 0.5em;
}

.web20 .ui_tabs_accordeon_content {
  border: 1px solid #aaa;
  border-top: none;
  padding: 2ex 1em 2ex 1em;
  margin-bottom: 3ex;
}

.web20 .issue_initiative_list .ui_tabs_accordeon_head {
  background-color: #e5e5ff;
}

.web20 .issue_initiative_list .ui_tabs_accordeon_head,
.web20 .issue_initiative_list .ui_tabs_accordeon_content {
  border-color: #aad;
}

.web20 .issue_initiative_list .ui_tabs_accordeon_content .ui_tabs_accordeon_content {
  border-color: #bbb;
  border-width: 1px;
}

.web20 .issue_initiative_list .ui_tabs_accordeon_content .ui_tabs_accordeon_head {
  background-color: #eee;
  border: 1px solid #bbb;
}

.web20 .issue_initiative_list .ui_tabs_accordeon_head a {
  font-size: 125%;
}
/* ... */

